- topbar mobile align fix

--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -12,7 +12,7 @@
       text-align: left;
       display: flex;
       flex-flow: wrap column;
-      margin: 12px 20%;
+      align-items: center;
     }
     &-item {
       display: inline;
